<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <com.travel.flybooking.support.CustomTextView
            android:id="@+id/tv_reference_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/reference_id"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#BDBDBD" />

        <com.travel.flybooking.support.CustomTextView
            android:id="@+id/tv_date_of_travel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/date_of_travel"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#BDBDBD" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp" >

            <com.travel.flybooking.support.CustomButton
                android:id="@+id/btn_view_booking"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/buttonfocus"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/view"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>